Fix grid on Safari

--- a/src/web/components/board/board.scss
+++ b/src/web/components/board/board.scss
@@ -12,6 +12,7 @@
     background-image: url("board-wood.png");
     background-size: contain;
     background-repeat: repeat;
+    height: 100%;
 }
 
 .container {
